[project]
name = "llm-transformers"
version = "0.1"
requires-python = ">= 3.10"
description = "Plugin for llm adding support for 🤗 Hugging Face Transformers"
readme = "README.md"
authors = [{name = "Andrew Wason"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm",
    "transformers",
    "torch",
    "soundfile",
    "pillow",
    "pytesseract",
    "timm",
    "protobuf",
    "pandas",
    "av",
]

[project.urls]
Homepage = "https://github.com/rectalogic/llm-transformers"
Changelog = "https://github.com/rectalogic/llm-transformers/releases"
Issues = "https://github.com/rectalogic/llm-transformers/issues"
CI = "https://github.com/rectalogic/llm-transformers/actions"

[project.entry-points.llm]
transformers = "llm_transformers"

[project.optional-dependencies]
test = ["pytest"]

[tool.ruff]
target-version = "py310"
line-length = 108

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-no-pep420
    "INP",
    # pyupgrade
    "UP",
]